src/client/src/components/Header.css
/* Prologue
  // Name: Header.css
  // Description: Define the dashboard header's CSS properties
  // Programmer: Nifemi Lawal
  // Creation date: 10/23/25
  // Revisions: 1.0
  // Pre/post conditions
  //   - Pre: None. 
  //   - Post: The the dashboard header's CSS properties are defined.
  // Errors: None. 
*/

/* Header styles */
.header {
    padding: 20px;
    background-color: #61d561;
    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
    font-family: Arial; 
    text-align: Center;
    display: flex;
    justify-content: space-between;
}

.header h1 {
    margin: 0;
    color: #333;
}

/* Dashboard content style */
.dashboard-content {
    font-family: Arial;
}

/* Profile container styles */
.profile-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
}

/* Profile picture styles */
.profile-picture-container {
    top: 20px;
    left: 20px; 
    width: 64px;
    height: 64px;
    border-radius: 50%;
    background-color: #333;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 10;
}

#profile-picture {
    width: 48px;
    height: 48px;
    border-radius: 50%;
    overflow: hidden;
}

#profile-picture img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

#profile-picture svg {
    width: 100%;
    height: 100%;
    color: #b3b3b3;
}

